kubernates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: makein-service
  labels:
    app: makein
    tier: frontend
    environment: production
spec:
  selector:
    app: makein
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
  type: NodePort
