kubernates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: makein-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devotree.in
    http:
      paths:
      - paths: ["/"]
        pathType: Prefix
        backend:
          service:
            name: makein-service
            port:
              number: 80
